--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -67,7 +67,7 @@ layout: layouts/base.njk
 
       <h3 class="base-card__subtitle">objective</h3>
 
-      <p class="base-card__paragraph">The industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="base-card__paragraph">Licensing and fiscal systems are transparent, fair and help countries maximize the revenues available for development spending.</p>
 
       <div class="base-card__cluster">
         <div class="cluster-box">Laws, regulations and contracts</div>
@@ -93,7 +93,7 @@ layout: layouts/base.njk
 
       <h3 class="base-card__subtitle">objective</h3>
 
-      <p class="base-card__paragraph">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="base-card__paragraph">Extractive sector revenues are managed in ways that serve long-term public interest and the economic sustainability of public finances, rather than short-term political or private agendas.</p>
 
       <div class="base-card__cluster">
         <div class="cluster-box">Fiscal rules</div>
@@ -115,12 +115,12 @@ layout: layouts/base.njk
   </div>
   <div class="connected-cards__container margin-top">
 
-    <div class="base-card__body padding-top">
-      <h2 class="base-card__title"><a>getting a good deal</a></h2>
+    <div class="base-card__body bottom-card">
+      <h2 class="base-card__title"><a>navigating the energy transition</a></h2>
 
       <h3 class="base-card__subtitle">objective</h3>
 
-      <p class="base-card__paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="base-card__paragraph">Resource-rich countries advance rather than hinder the transition to cleaner energy. Countries rich in strategic minerals do not replicate mis-governance in that subsector.</p>
 
       <div class="base-card__cluster">
         <div class="cluster-box">Strategic minerals</div>
@@ -133,12 +133,12 @@ layout: layouts/base.njk
         </div>
       </div>
     </div>
-    <div class="base-card__body padding-top">
-      <h2 class="base-card__title"><a>getting a good deal</a></h2>
+    <div class="base-card__body bottom-card">
+      <h2 class="base-card__title"><a>addressing corruption and "state capture"</a></h2>
 
       <h3 class="base-card__subtitle">objective</h3>
 
-      <p class="base-card__paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="base-card__paragraph">Governments and companies conduct sector operations in ways that reduce opportunities for corruption and capture, and anticorruption actors tackle extractive sector corruption more effectively.</p>
 
       <div class="base-card__cluster">
         <div class="cluster-box">"Corruption Risks"</div>
@@ -328,48 +328,79 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-  <div class="center">
+  <div class="center map-focus__container">
     <img src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
-  </div>
-</section>
 
-<section class="text-section">
-  <div class="center center--narrow">
-    <p><strong>We have more influence in the early stages of the development of natural resources than when trying to address weaknesses or gaps in countries that have decades-old extractive sectors.</strong></p>
-    <p>However, NRGI balances its engagement across countries where there is openness to reform and the possibility of significant short-term change, with more challenging contexts where the likelihood of immediate success is lower but NRGI’s contribution is potentially more game-changing and the impact for citizens more significant over the long term.</p>
-  </div>
-</section>
-
-<section class="base-section text-align:center shadow-section" style="--padding: var(--s1)">
-  <a href="#" class="button button--primary button--accent-color">Download full strategy</a>
-</section>
-
-<section class="text-section shadow-section quote-section">
-  <div class="center center--narrow">
-    <blockquote>
-      <p>NRGI recognizes that the mining industry is critical to modern life but that there are changes that the industry can make that will help to reduce its negative impacts. NRGI also gives the impression that it is open to learning from industry in a way that other NGOs do not. This builds trust and makes for a more open conversation.”</p>
-      <p><small>Quotations taken from respondents to anonymous stakeholder surveys and independent evaluations</small></p>
-    </blockquote>
-  </div>
-</section>
-
-<footer class="footer base-section">
-  <div class="center center--wrapper">
-    <div>
-      <form class="subscribe-form" action=""><input type="text" placeholder="Sign up to receive updates"><input type="submit" value="Subscribe"></form>
-      <div class="social-media">
-        <a href="#">{% include 'icons/facebook.njk' %}</a>
-        <a href="#">{% include 'icons/linkedin.njk' %}</a>
-        <a href="#">{% include 'icons/twitter.njk' %}</a>
-        <a href="#">{% include 'icons/youtube.njk' %}</a>
+  <div class="map-focus__wrapper">
+    <div class="focus-countries__container">
+      <div class="map-focus__title">
+        <h1>Focus countries</h1>
       </div>
-      <a href="#" class="color:white">resourcegovernance.org</a>
+      <div class="focus-countries-cluster__container">
+        <div class="map-cluster__btns">Colombia</div>
+        <div class="map-cluster__btns">Dem. Rep. of Congo</div>
+        <div class="map-cluster__btns">Ghana</div>
+        <div class="map-cluster__btns">Guinea</div>
+        <div class="map-cluster__btns">Mexico</div>
+        <div class="map-cluster__btns">Mongolia</div>
+        <div class="map-cluster__btns">Myanmar</div>
+        <div class="map-cluster__btns">Nigeria</div>
+        <div class="map-cluster__btns">Peru</div>
+        <div class="map-cluster__btns">Senegal</div>
+        <div class="map-cluster__btns">Tanzania</div>
+        <div class="map-cluster__btns">Uganda</div>
+      </div>
+    </div>
+    <div class="focus-regions__container">
+      <div class="map-focus__title">
+        <h1>Focus regions</h1>
+      </div>
+      <div class="focus-regions-cluster__container">
+        <div class="map-cluster__btns">Eurasia</div>
+        <div class="map-cluster__btns">Middle East & North Africa</div>
+      </div>
+    </div>
     </div>
   </div>
-</footer>
-<div class="by-line">
-  <div class="center">
-    <a href="https://ccm.design">by ccm.design</a>
+  </section>
+
+  <section class="text-section">
+    <div class="center center--narrow">
+      <p><strong>We have more influence in the early stages of the development of natural resources than when trying to address weaknesses or gaps in countries that have decades-old extractive sectors.</strong></p>
+      <p>However, NRGI balances its engagement across countries where there is openness to reform and the possibility of significant short-term change, with more challenging contexts where the likelihood of immediate success is lower but NRGI’s contribution is potentially more game-changing and the impact for citizens more significant over the long term.</p>
+    </div>
+  </section>
+
+  <section class="base-section text-align:center shadow-section" style="--padding: var(--s1)">
+    <a href="#" class="button button--primary button--accent-color">Download full strategy</a>
+  </section>
+
+  <section class="text-section shadow-section quote-section">
+    <div class="center center--narrow">
+      <blockquote>
+        <p>NRGI recognizes that the mining industry is critical to modern life but that there are changes that the industry can make that will help to reduce its negative impacts. NRGI also gives the impression that it is open to learning from industry in a way that other NGOs do not. This builds trust and makes for a more open conversation.”</p>
+        <p><small>Quotations taken from respondents to anonymous stakeholder surveys and independent evaluations</small></p>
+      </blockquote>
+    </div>
+  </section>
+
+  <footer class="footer base-section">
+    <div class="center center--wrapper">
+      <div>
+        <form class="subscribe-form" action=""><input type="text" placeholder="Sign up to receive updates"><input type="submit" value="Subscribe"></form>
+        <div class="social-media">
+          <a href="#">{% include 'icons/facebook.njk' %}</a>
+          <a href="#">{% include 'icons/linkedin.njk' %}</a>
+          <a href="#">{% include 'icons/twitter.njk' %}</a>
+          <a href="#">{% include 'icons/youtube.njk' %}</a>
+        </div>
+        <a href="#" class="color:white">resourcegovernance.org</a>
+      </div>
+    </div>
+  </footer>
+  <div class="by-line">
+    <div class="center">
+      <a href="https://ccm.design">by ccm.design</a>
+    </div>
   </div>
-</div>
 
