--- a/src/site/_includes/postcss/connected-cards-components/_connected-cards.css
+++ b/src/site/_includes/postcss/connected-cards-components/_connected-cards.css
@@ -22,7 +22,7 @@
     width: 120px;
     height: 120px;
     margin: 0 auto;
-    border: 4px solid rgba(231,80,54,.81961);
+    border: 4px solid var(--accent-color);
     transition: .2s ease-out;
 }
 
@@ -63,7 +63,7 @@
 
 .base-card__body {
     position: relative;
-    border: solid #e75036d1;
+    border: solid var(--accent-color);
     border-width: 6px 0 6px 0;
     box-shadow: grey 0 0 26px -11px;
     width: 570px;
@@ -74,8 +74,9 @@
     margin: 0 90px;
 }
 
-.connected-cards__section .base-card__body.padding-top {
+.connected-cards__section .base-card__body.bottom-card {
     padding-top: 90px;
+    height: 530px;
 }
 
 .connected-cards__container {
@@ -99,12 +100,18 @@
 
 .base-card__subtitle {
     margin-top: 20px;
-    font-size: 14px;
+    font-size: .9em;
+    color: #646464;
+}
+
+.base-card__title {
+    font-size: 1.18em;
 }
 
 .base-card__paragraph {
     margin-top: 5px;
-    font-size: 18px;
+    font-size: 1.2em;
+    color: #646464;
 }
 
 .base-card__cluster {
@@ -121,6 +128,7 @@
     width: -moz-fit-content;
     width: fit-content;
     float: left;
+    color: #646464;
 }
 
 .nrgi-impact-tag.custom-tag .nrgi-impact-tag__tag span {
@@ -146,21 +154,21 @@
 
 .line-top-left {
     border-radius: 0 0 0 30px;
-    border: solid #e96747;
+    border: solid var(--accent-color);
     border-width: 0 0 20px 20px;
     opacity: .1;
 }
 
 .line-top-right {
     border-radius: 0 0 30px 0;
-    border: solid #e96747;
+    border: solid var(--accent-color);
     border-width: 0 20px 20px 0;
     opacity: .1;
 }
 
 .line-bottom-left {
     border-radius: 30px 0 0 0;
-    border: solid #e96747;
+    border: solid var(--accent-color);
     border-width: 20px 0 0 20px;
     margin-top: -20px;
     opacity: .1;
@@ -168,7 +176,7 @@
 
 .line-bottom-right {
     border-radius: 0 30px 0 0;
-    border: solid #e96747;
+    border: solid var(--accent-color);
     border-width: 20px 20px 0 0;
     margin-top: -20px;
     opacity: .1;
@@ -193,7 +201,7 @@
 }
 
 .connected-lines-straight {
-    border: solid #e96747;
+    border: solid var(--accent-color);
     border-width: 0 0 0 20px;
     height: 200px;
     position: absolute;
