--- a/src/site/_includes/postcss/modals-cards-component/_modal-cards.css
+++ b/src/site/_includes/postcss/modals-cards-component/_modal-cards.css
@@ -64,7 +64,7 @@
 .modal-close:after {
     content: "X";
     float: right;
-    margin: 5px 5px 0 0;
+    margin: 10px 10px 0 0;
     width: 30px;
     height: 30px;
     position: relative;
@@ -72,9 +72,9 @@
     text-align: center;
     line-height: 30px;
     cursor: pointer;
-    background-color: rgba(255,255,255,0.8);
+    font-size: 2em;
+    background-color: hsla(0,0%,100%,.8);
     border-radius: 20px;
-    box-shadow: 0 0 3px #000;
 }
 
 input[id*="modal_"] {
@@ -125,4 +125,8 @@ input[id*="modal_"]:checked + div.modal .modal-content {
 
 .modal-content .nrgi-impact-tag.custom-tag {
     bottom: 75px;
+}
+
+.cards__section .base-cards {
+    margin: -15px 18px !important
 }
