--- a/src/site/_includes/postcss/connected-cards-components/_connected-cards.css
+++ b/src/site/_includes/postcss/connected-cards-components/_connected-cards.css
@@ -196,7 +196,7 @@ Contains all connected cards css
 
 .connected-lines__wrapper {
     position: relative;
-    width: 768px;
+    width: 51.5%;
     margin: 257px auto 0;
 }
 
