several updates on custom components

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -24,6 +24,7 @@
 
 /* Boilerplate Components */
 @import 'custom-components/_prose.css';
+@import 'custom-components/_center-custom.css';
 
 /* Import order is relevant */
 @import 'custom-components/_button-structure.css';
