--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -45,9 +45,112 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section">
-  <div class="center center--wrapper">
-    <h1 class="text-align:center">Connected Cards</h1>
+<section class="base-section connected-cards__section">
+
+  <div class="connected-lines__container">
+    <div class="connected-lines__wrapper">
+      <div class="between-lines-text">
+        <h1>Across these two areas, we will also address particular aspects of the energy transition and of corruption and "state capture".</h1>
+      </div>
+      <div class="connected-lines-straight line-right"></div>
+      <div class="connected-lines-straight line-left"></div>
+      <div class="connected-lines line-top-left"></div>
+      <div class="connected-lines line-top-right"></div>
+      <div class="connected-lines line-bottom-left"></div>
+      <div class="connected-lines line-bottom-right"></div>
+    </div>
+  </div>
+
+  <div class="connected-cards__container pull-up">
+    <div class="base-card__body">
+      <h2 class="base-card__title"><a>getting a good deal</a></h2>
+
+      <h3 class="base-card__subtitle">objective</h3>
+
+      <p class="base-card__paragraph">Licensing and fiscal systems are transparent, fair and help countries maximize the revenues available for development spending.</p>
+
+      <div class="base-card__cluster">
+        <div class="cluster-box">Laws, regulations and contracts</div>
+        <div class="cluster-box">Award of licenses</div>
+        <div class="cluster-box">Economic linkages</div>
+        <div class="cluster-box">State-owned enterprises</div>
+        <div class="cluster-box">Tax systems</div>
+      </div>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>Contract transparency in Mexico</p>
+      </div>
+
+      <div class="connected-cards-img-top__container">
+        <div id="connected-cards-hover-top-left" class="connected-cards-img__wrapper pulse">
+          <img src="/images/deal-icon.svg" alt="deal-icon">
+        </div>
+      </div>
+    </div>
+    <div class="base-card__body">
+      <h2 class="base-card__title"><a>managing revenues</a></h2>
+
+      <h3 class="base-card__subtitle">objective</h3>
+
+      <p class="base-card__paragraph">Extractive sector revenues are managed in ways that serve long-term public interest and the economic sustainability of public finances, rather than short-term political or private agendas.</p>
+
+      <div class="base-card__cluster">
+        <div class="cluster-box">Fiscal rules</div>
+        <div class="cluster-box">Dept</div>
+        <div class="cluster-box">State-owned enterprises</div>
+      </div>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>Contract transparency in Mexico</p>
+      </div>
+
+      <div class="connected-cards-img-top__container">
+        <div id="connected-cards-hover-top-right" class="connected-cards-img__wrapper pulse">
+          <img src="/images/revenues-icon.svg" alt="revenues-icon">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="connected-cards__container margin-top">
+
+    <div class="base-card__body bottom-card">
+      <h2 class="base-card__title"><a>navigating the energy transition</a></h2>
+
+      <h3 class="base-card__subtitle">objective</h3>
+
+      <p class="base-card__paragraph">Resource-rich countries advance rather than hinder the transition to cleaner energy. Countries rich in strategic minerals do not replicate mis-governance in that subsector.</p>
+
+      <div class="base-card__cluster">
+        <div class="cluster-box">Strategic minerals</div>
+        <div class="cluster-box">"Stranded assets"</div>
+      </div>
+
+      <div class="connected-cards-img-bottom__container">
+        <div id="connected-cards-hover-bottom-left" class="connected-cards-img__wrapper">
+          <img src="/images/energy-transition-icon.svg" alt="energy-transition-icon">
+        </div>
+      </div>
+    </div>
+    <div class="base-card__body bottom-card">
+      <h2 class="base-card__title"><a>addressing corruption and "state capture"</a></h2>
+
+      <h3 class="base-card__subtitle">objective</h3>
+
+      <p class="base-card__paragraph">Governments and companies conduct sector operations in ways that reduce opportunities for corruption and capture, and anticorruption actors tackle extractive sector corruption more effectively.</p>
+
+      <div class="base-card__cluster">
+        <div class="cluster-box">"Corruption Risks"</div>
+        <div class="cluster-box">"State capture by elites"</div>
+      </div>
+
+      <div class="connected-cards-img-bottom__container">
+        <div id="connected-cards-hover-bottom-right" class="connected-cards-img__wrapper">
+          <img src="/images/corruption-icon.svg" alt="corruption-icon">
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
@@ -65,9 +168,149 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section">
-  <div class="center center--wrapper">
-    <h1 class="text-align:center">Cards</h1>
+<section class="base-section cards__section">
+  <ul class="grid">
+
+    <li class="base-card">
+      <div class="base-card__content">
+        <h2>
+          <a aria-describedby="Multiple modes of engagement">Multiple modes of engagement</a>
+        </h2>
+        <p>NGRI delivers applied research, data and analysis, policy advocacy, capacity development, and technical assistance, and serves as a convener of actors working toward reform.</p>
+        <div class="nrgi-impact-tag">
+          <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+          <p>Resource Governance Index drives reform</p>
+        </div>
+
+        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-1">LEARN MORE</button>
+
+      </div>
+    </li>
+
+    <li class="base-card">
+      <div class="base-card__content">
+        <h2>
+          <a aria-describedby="National players">National players</a>
+        </h2>
+        <p>We work with agents of change based on an analysis of which actors are best placed to work in alliance to effect particular policy reforms in a country. We address asymmetries of information, access and capacity, and build trust between actors</p>
+        <div class="nrgi-impact-tag">
+          <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+          <p>Guinea's road improved mining governance</p>
+        </div>
+
+        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-2">LEARN MORE</button>
+
+      </div>
+    </li>
+
+    <li class="base-card">
+      <div class="base-card__content">
+        <h2>
+          <a aria-describedby="International players">International players</a>
+        </h2>
+        <p>We work with influential states, regional bodies, multilateral organizations, multi-stakeholder iniatives, and industry actors to develop international norms and standards.</p>
+        <div class="nrgi-impact-tag">
+          <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+          <p>A strengthened EITI standard</p>
+        </div>
+
+        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-3">LEARN MORE</button>
+
+      </div>
+    </li>
+
+    <li class="base-card">
+      <div class="base-card__content">
+        <h2>
+          <a aria-describedby="Maximization of benefits, reduction of harms">Maximization of benefits, reduction of harms</a>
+        </h2>
+        <p>Governments that implement policies in line with good practice and citizen prioritie will likely increase benefits and reduce harms from the sector.</p>
+
+        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-4">LEARN MORE</button>
+
+      </div>
+    </li>
+  </ul>
+
+  <div class="dialog" id="card-dialog-1">
+    <div class="dialog-overlay" tabindex="-1" data-a11y-dialog-hide></div>
+    <dialog class="dialog-content" aria-labelledby="dialogTitle" aria-describedby="dialogDescription">
+      <button data-a11y-dialog-hide class="dialog-close" aria-label="Close this dialog window">&times;</button>
+
+      <div>
+        <h2>
+          <a aria-describedby="Multiple modes of engagement">Multiple modes of engagement</a>
+        </h2>
+
+      <p>NRGI is one many actors working in concert to advence natural resource governance. NGRI delivers applied research, data and analysis, policy advocacy, capacity development, and technical assistance, and serves as a convener of actors working toward reform.</p>
+      <p>We focus those intervetions on specific areas of the extractive industries decision chain. Other actors undertake complementary work in development, rule of law and governance, and on other aspects of the  decision chain; their work suports and reinforces our  own.</p>
+
+
+        <div class="nrgi-impact-tag">
+          <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+          <p>Resource Governance Index drives reform</p>
+        </div>
+      </div>
+    </dialog>
+  </div>
+
+  <div class="dialog" id="card-dialog-2">
+    <div class="dialog-overlay" tabindex="-1" data-a11y-dialog-hide></div>
+    <dialog class="dialog-content" aria-labelledby="dialogTitle" aria-describedby="dialogDescription">
+      <button data-a11y-dialog-hide class="dialog-close" aria-label="Close this dialog window">&times;</button>
+
+      <div>
+        <h2>
+          <a aria-describedby="National players">National players</a>
+        </h2>
+        <p>At the national, NRGI partners with agents of change who are best placed to work in alliance to effect particular policy reforms.</p>
+        <p>we address asymmetries of information, acess and capacity, and build trust between actors.</p>
+        <p><strong>We emphasize the importance of building the credibility and resilience of civil society organizations, who inform policy reform by serving as intermediaries and amplifiers of citizens' voices and priorities. By building links between accountability actors, including civil society, oversight actors (e.g., parliamentary committees and supreme audit institutions) and the media, we furtherincentivize and sustain reform efforts.</strong></p>
+        <p>By building links between accountability actors, including civil society organizations, oversght actord (e.g., parliamentary committees and supreme audit institutions) and media, we further incentivize and sustain reform efforts </p>
+
+        <div class="nrgi-impact-tag">
+          <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+          <p>Guinea's road improved mining governance</p>
+        </div>
+      </div>
+    </dialog>
+  </div>
+
+  <div class="dialog" id="card-dialog-3">
+    <div class="dialog-overlay" tabindex="-1" data-a11y-dialog-hide></div>
+    <dialog class="dialog-content" aria-labelledby="dialogTitle" aria-describedby="dialogDescription">
+      <button data-a11y-dialog-hide class="dialog-close" aria-label="Close this dialog window">&times;</button>
+
+      <div>
+        <h2>
+          <a aria-describedby="International players">International players</a>
+        </h2>
+        <p>At the international level, NRGI engages external influencers which are predisposed to receive and adopt NRGI's evidence-based messaging.</p>
+        <p>We work with influential states, regional bodies, multilateral organizations, multi-stakeholder iniatives, and industry actors to develop international norms and standards.</p>
+        <p>Policymakers and companies respond to these international cues defining expected and deserable practice, and then signal their intentions and improve their reputations through their policies and commitments.</p>
+
+        <div class="nrgi-impact-tag">
+          <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+          <p>A strengthened EITI standard</p>
+        </div>
+      </div>
+    </dialog>
+  </div>
+
+  <div class="dialog" id="card-dialog-4">
+    <div class="dialog-overlay" tabindex="-1" data-a11y-dialog-hide></div>
+    <dialog class="dialog-content" aria-labelledby="dialogTitle" aria-describedby="dialogDescription">
+      <button data-a11y-dialog-hide class="dialog-close" aria-label="Close this dialog window">&times;</button>
+
+      <div>
+        <h2>
+          <a aria-describedby="Maximization of benefits, reduction of harms">Maximization of benefits, reduction of harms</a>
+        </h2>
+        <p>Governments that implement policies in line with good practice and citizen prioritie will likely increase benefits and reduce harms from the sector.</p>
+        <p>Benefits include the availability of revenues for public services and social spending, helping to lift citizens out of poverty, as well increased dialogue and accountability. Harms include the direct impacts of extraction (e.g., corruption, conflict and social and environmental effects), growing inequality, and negative gender-differentiated impacts.</p>
+        <p>For direct interventions on sustainable and inclusive development polices, NRGI will rely on the broader ecosystem of actors working on governance and development.</p>
+      </div>
+    </dialog>
   </div>
 </section>
 
@@ -84,8 +327,39 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-  <div class="center center--wrapper">
-    <h1 class="text-align:center">Map</h1>
+  <div class="center map-focus__container">
+    <img src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
+
+    <div class="map-focus__wrapper">
+      <div class="focus-countries__container">
+        <div class="map-focus__title">
+          <h1>Focus countries</h1>
+        </div>
+        <div class="focus-countries-cluster__container">
+          <div class="map-cluster__btns">Colombia</div>
+          <div class="map-cluster__btns">Dem. Rep. of Congo</div>
+          <div class="map-cluster__btns">Ghana</div>
+          <div class="map-cluster__btns">Guinea</div>
+          <div class="map-cluster__btns">Mexico</div>
+          <div class="map-cluster__btns">Mongolia</div>
+          <div class="map-cluster__btns">Myanmar</div>
+          <div class="map-cluster__btns">Nigeria</div>
+          <div class="map-cluster__btns">Peru</div>
+          <div class="map-cluster__btns">Senegal</div>
+          <div class="map-cluster__btns">Tanzania</div>
+          <div class="map-cluster__btns">Uganda</div>
+        </div>
+      </div>
+      <div class="focus-regions__container">
+        <div class="map-focus__title">
+          <h1>Focus regions</h1>
+        </div>
+        <div class="focus-regions-cluster__container">
+          <div class="map-cluster__btns">Eurasia</div>
+          <div class="map-cluster__btns">Middle East & North Africa</div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
