--- a/src/site/_includes/scripts.njk
+++ b/src/site/_includes/scripts.njk
@@ -7,6 +7,7 @@
   {% include "js/collapse.js" %}
   {% include "js/tabs.js" %}
   {% include "js/a11y-dialog.js" %}
+  {% include "js/connected-cards.js" %}
 
   {# core functions #}
   {% include "js/core.js" %}
