Revert "Reorganize components"
This reverts commit 5bb6940c99a283863bfbbb619f408cbd99e58d51.

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -21,6 +21,18 @@
 @import 'vendor-components/_stack.css';
 @import 'vendor-components/_switcher.css';
 
+/* Connected cards Components */
+@import 'connected-cards-components/_connected-cards.css';
+
+/* Modal cards Components */
+@import 'modal-cards-component/_modal-cards.css';
+
+/* World map Components */
+@import 'worldmap-components/_worldmap.css';
+
+/* Scrollbar Components */
+@import 'scrollbar-components/_scrollbar.css';
+
 /* Boilerplate Components */
 @import 'custom-components/_prose.css';
 @import 'custom-components/_center-custom.css';
@@ -52,10 +64,6 @@
 @import 'project-components/_title-section.css';
 @import 'project-components/_hero-section.css';
 @import 'project-components/_sections.css';
-@import 'project-components/_connected-cards-section.css';
-@import 'project-components/_modal-cards-section.css';
-@import 'project-components/_world-map-section.css';
-@import 'project-components/_scrollbar.css';
 
 /* Custom Components */
 @import '_custom-component.css';
