Revert "Merge branch 'master' into yzt"
This reverts commit 8e066b65ee68290b79f15ef15ed5826dc4ba0c24, reversing
changes made to 4e13268771ab299434055ae8e36ea0758fee5775.

--- a/src/site/_includes/layouts/base-styleguide.njk
+++ b/src/site/_includes/layouts/base-styleguide.njk
@@ -9,12 +9,12 @@
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
 
     <div id="main" class="container">
-      {% include "base-components/header.njk" %}
+      {% include "header.njk" %}
       {{ content | safe }}
-      {% include "base-components/footer.njk" %}
+      {% include "footer.njk" %}
     </div>
 
-      {% include "base-components/a11y-dialog.njk" %}
+      {% include "a11y-dialog.njk" %}
     
       {% include "scripts.njk" %}
 
