--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -35,7 +35,6 @@
 
 /* Boilerplate Components */
 @import 'custom-components/_prose.css';
-@import 'custom-components/_center-custom.css';
 
 /* Import order is relevant */
 @import 'custom-components/_button-structure.css';
@@ -60,12 +59,11 @@
 /* a11y-dialog */
 @import 'custom-components/_a11y-dialog.css';
 
-/* Project Components */
-@import 'project-components/_title-section.css';
-@import 'project-components/_hero-section.css';
-@import 'project-components/_sections.css';
-
 /* Custom Components */
 @import '_custom-component.css';
 
+/* Sections */
+@import 'sections/_title-section.css';
+@import 'sections/_hero-section.css';
+@import 'sections/_sections.css';
 
