--- a/src/site/prose.njk
+++ b/src/site/prose.njk
@@ -3,5 +3,5 @@ layout: layouts/base.njk
 ---
 
 <div class="center">
-  {% include 'base-components/prose.njk' %}
+  {% include 'prose.njk' %}
 </div>
