--- a/src/site/_includes/postcss/_utils.css
+++ b/src/site/_includes/postcss/_utils.css
@@ -62,3 +62,10 @@
 }
 
 .material-icons { @include material-icons; }
+
+@mixin placeholder {
+  &::-webkit-input-placeholder { @content }
+  &:-moz-placeholder { @content }
+  &::-moz-placeholder { @content }
+  &:-ms-input-placeholder { @content }
+}
